new laptop version

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -198,7 +198,7 @@
     .coming__inner
         padding-left: 20px
         padding-right: 20px
-        background-image: url(/img/mobile_bg.png)
+        background-image: url(../img/mobile_bg.png)
         height: 88vh
         padding-top: 140px
 
@@ -224,6 +224,7 @@
         display: block
     .contact__form .form-group input
         width: 312px
+        margin-right: 0
     .contact__form .form-group textarea
         width: 312px
     .contact__form button
@@ -231,6 +232,10 @@
         margin-top: 53px
     .form-group
         margin-bottom: 0
+    .contact__form
+        margin-right: 0
+        margin-left: 0
+
 
 
 // ≥576px
