--- a/sass/main.sass
+++ b/sass/main.sass
@@ -467,7 +467,7 @@ video:focus
 		line-height: 32px
 
 .coming__inner
-	background-image: url(/img/man.png)
+	background-image: url(../img/man.png)
 	height: 90vh
 	padding-left: 55px
 	background-repeat: no-repeat
@@ -540,6 +540,22 @@ video:focus
 	
 @media screen and (max-width: 1441px)
 
+	.subscription__inner h1
+		font-size: 28px
+	.subscription__inner h4
+		font-size: 18px
+	.subscription__form
+		margin-top: 56px
+	.video
+		margin-top: 96px
+	.video__wrapper
+		height: 212px
+	.services .number
+		font-size: 72px
+	.section__title h2
+		font-size: 28px
+
+
 	.services .services__inner
 		display: grid
 		grid-template-columns: repeat(2,1fr)
@@ -550,16 +566,27 @@ video:focus
 	.how__content.second__step
 		margin-left: 99px
 
+	.contact__form
+		margin-right: 55px
+		margin-left: 55px
+
 	.contact__form-inner
 		display: flex
+
 	.contact__form .form-group textarea
 		width: 402px
 		height: 144px
+
 	.contact__form .form-group input
 		width: 402px
+		margin-right: 30px
+
 	.contact__form button
 		width: 402px
 		margin-top: 0
+
+	.how__content
+		width: 340px
 
 	
 @import "media" // Always at the end
